Fix dark mode bootcamp dashboard gradient (#7275)

--- a/app/css/bootcamp/variables.css
+++ b/app/css/bootcamp/variables.css
@@ -1,5 +1,8 @@
 .bg-grad-basic {
-    background-image: linear-gradient(#e1ebff, rgba(225, 235, 255, 0));
+    background-image: linear-gradient(
+        var(--backgroundColorI),
+        var(--backgroundColorITransparent)
+    );
     background-size: 100% 350px;
     background-repeat: repeat-x;
 }
